# AXT

./: Makefile  README.md  pyproject.toml
src/girbridge/cli/: app.py  draft_mapping.py  generate_code_prompt.py  regenerate_code_prompt.py
src/girbridge/core/: config.py
src/girbridge/resources/prompts/: regenerate_code_system.txt
src/girbridge/services/: codegen_prompt_service.py  mapping_diff_service.py  regenerate_codegen_prompt_service.py
tests/cli/: test_generate_code_prompt.py  test_regenerate_code_prompt.py
tests/services/: test_codegen_prompt_service.py  test_mapping_service.py  test_regenerate_codegen_prompt_service.py
